SystemWebDialogDelegate: Track instances

This CL tracks SystemWebDialogDelegate instances so that derived
classes can check for an existing instance and focus that instead
of opening a new instance.

Bug: 855344
Change-Id: I688f2e09bd280a511d4ab53463beccfdd10f5371
Reviewed-on: https://chromium-review.googlesource.com/c/1366793
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Toni Baržić <tbarzic@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616061}
Former-commit-id: f7c8453dcd2ea5ed44852a76823375537c6668a5