chrome/browser/ui/webui/chromeos/system_web_dialog_delegate.cc
@@ -3,13 +3,39 @@
 // found in the LICENSE file.
 
 #include "chrome/browser/ui/webui/chromeos/system_web_dialog_delegate.h"
+
+#include <list>
+
 #include "ash/public/cpp/shell_window_ids.h"
+#include "base/no_destructor.h"
+#include "base/stl_util.h"
 #include "chrome/browser/profiles/profile_manager.h"
 #include "chrome/browser/ui/views/chrome_web_dialog_view.h"
 #include "components/session_manager/core/session_manager.h"
 #include "content/public/browser/browser_context.h"
+#include "ui/aura/window.h"
 
 namespace chromeos {
+
+namespace {
+
+// Track all open system web dialog instances. This should be a small list.
+std::list<SystemWebDialogDelegate*>* GetInstances() {
+  static base::NoDestructor<std::list<SystemWebDialogDelegate*>> instances;
+  return instances.get();
+}
+
+}  // namespace
+
+// static
+SystemWebDialogDelegate* SystemWebDialogDelegate::FindInstance(
+    const std::string& id) {
+  auto* instances = GetInstances();
+  auto iter =
+      std::find_if(instances->begin(), instances->end(),
+                   [id](SystemWebDialogDelegate* i) { return i->Id() == id; });
+  return iter == instances->end() ? nullptr : *iter;
+}
 
 SystemWebDialogDelegate::SystemWebDialogDelegate(const GURL& gurl,
                                                  const base::string16& title)
@@ -28,9 +54,26 @@ SystemWebDialogDelegate::SystemWebDialogDelegate(const GURL& gurl,
       modal_type_ = ui::MODAL_TYPE_SYSTEM;
       break;
   }
+  GetInstances()->push_back(this);
 }
 
-SystemWebDialogDelegate::~SystemWebDialogDelegate() {}
+SystemWebDialogDelegate::~SystemWebDialogDelegate() {
+  base::EraseIf(*GetInstances(),
+                [this](SystemWebDialogDelegate* i) { return i == this; });
+}
+
+const std::string& SystemWebDialogDelegate::Id() {
+  return gurl_.spec();
+}
+
+void SystemWebDialogDelegate::Focus() {
+  // Focusing a modal dialog does not make it the topmost dialog and does not
+  // enable interaction. It does however remove focus from the current dialog,
+  // preventing interaction with any dialog. TODO(stevenjb): Investigate and
+  // fix, https://crbug.com/914133.
+  if (modal_type_ == ui::MODAL_TYPE_NONE)
+    dialog_window()->Focus();
+}
 
 ui::ModalType SystemWebDialogDelegate::GetDialogModalType() const {
   return modal_type_;
